force-app/main/default/objects/Lead/fields/Anho__c.field-meta.xml
<CustomField>
    <fullName>Anho__c</fullName>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>