force-app/main/default/objects/Lead/fields/Aportacion_Estimada__c.field-meta.xml
<CustomField>
    <fullName>Aportacion_Estimada__c</fullName>
    <inlineHelpText>Aportación estimada de ahorro mensual</inlineHelpText>
    <label>Aportación estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>