force-app/main/default/objects/Lead/fields/Aseguradora__c.field-meta.xml
<CustomField>
    <fullName>Aseguradora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aseguradora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospectos</relationshipLabel>
    <relationshipName>Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>