force-app/main/default/objects/Lead/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>¿El usuario cuenta con contrato?</inlineHelpText>
    <label>¿Contrato?</label>
    <type>Checkbox</type>
</CustomField>