force-app/main/default/objects/Lead/fields/CP__c.field-meta.xml
<CustomField>
    <fullName>CP__c</fullName>
    <label>Código Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>