force-app/main/default/objects/Lead/fields/Documento_Fuente_Recibido__c.field-meta.xml
<CustomField>
    <fullName>Documento_Fuente_Recibido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documento Fuente Recibido</label>
    <type>Checkbox</type>
</CustomField>