force-app/main/default/objects/Lead/fields/Edad_Calculada__c.field-meta.xml
<CustomField>
    <fullName>Edad_Calculada__c</fullName>
    <formula>FLOOR((TODAY() - Fecha_de_nacimiento__c) / 365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad Calculada.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>