force-app/main/default/objects/Lead/fields/Fuma__c.field-meta.xml
<CustomField>
    <fullName>Fuma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Fuma?</label>
    <type>Checkbox</type>
</CustomField>