force-app/main/default/objects/Lead/fields/Giro_Actividad__c.field-meta.xml
<CustomField>
    <fullName>Giro_Actividad__c</fullName>
    <label>Giro / Actividad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>