force-app/main/default/objects/Lead/fields/HospitalesReferencias__c.field-meta.xml
<CustomField>
    <fullName>HospitalesReferencias__c</fullName>
    <label>Hospitales de referencias</label>
    <type>TextArea</type>
</CustomField>