force-app/main/default/objects/Lead/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <inlineHelpText>Marca del auto</inlineHelpText>
    <label>Marca</label>
    <length>40</length>
    <type>Text</type>
</CustomField>