force-app/main/default/objects/Lead/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>