force-app/main/default/objects/Lead/fields/Monto_del_contrato__c.field-meta.xml
<CustomField>
    <fullName>Monto_del_contrato__c</fullName>
    <label>Monto del contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>