force-app/main/default/objects/Lead/fields/Motivo_No_Calificacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Calificacion__c</fullName>
    <label>Motivo no calificación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sin información suficiente</fullName>
            </value>
            <value>
                <fullName>No aplica producto</fullName>
                <label>No aplica al producto</label>
            </value>
            <value>
                <fullName>Duplicado</fullName>
            </value>
            <value>
                <fullName>Sin interés</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>