force-app/main/default/objects/Lead/fields/NumeroProspecto__c.field-meta.xml
<CustomField>
    <fullName>NumeroProspecto__c</fullName>
    <displayFormat>LEAD-{000000}</displayFormat>
    <label>Número del prospecto</label>
    <type>AutoNumber</type>
</CustomField>