force-app/main/default/objects/Lead/fields/ObjetivoPlan__c.field-meta.xml
<CustomField>
    <fullName>ObjetivoPlan__c</fullName>
    <label>Objetivo de plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retiro</fullName>
            </value>
            <value>
                <fullName>Ahorro</fullName>
            </value>
            <value>
                <fullName>Seguro de vida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>