force-app/main/default/objects/Lead/fields/Origen_Lead__c.field-meta.xml
<CustomField>
    <fullName>Origen_Lead__c</fullName>
    <label>Origen del lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
                <label>Web (Muévete Seguro)</label>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
            <value>
                <fullName>Llamada</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Campaña</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>