force-app/main/default/objects/Lead/fields/PadecimientosExistentes__c.field-meta.xml
<CustomField>
    <fullName>PadecimientosExistentes__c</fullName>
    <label>Padecimientos existentes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>