force-app/main/default/objects/Lead/fields/Plazo_Plan__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Plan__c</fullName>
    <label>Plazo del Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 año</fullName>
            </value>
            <value>
                <fullName>5 años</fullName>
            </value>
            <value>
                <fullName>10 años</fullName>
            </value>
            <value>
                <fullName>20 años</fullName>
            </value>
            <value>
                <fullName>25 años</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>