force-app/main/default/objects/Lead/fields/Porcentaje_de_afianzar__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_afianzar__c</fullName>
    <label>Porcentaje de afianzar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>