force-app/main/default/objects/Lead/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <label>Presupuesto estimado mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>