force-app/main/default/objects/Lead/fields/Quote_ID_Externo__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID_Externo__c</fullName>
    <label>ID Cotización Externa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>