force-app/main/default/objects/Lead/fields/Regimenes_Fiscales__c.field-meta.xml
<CustomField>
    <fullName>Regimenes_Fiscales__c</fullName>
    <label>Regímenes Fiscales</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>tipos_de_contribuyentes__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sueldos y Salarios e Ingresos Asimilados a Salarios</fullName>
            </value>
            <value>
                <fullName>Personas Físicas con Actividades Empresariales y Profesionales</fullName>
            </value>
            <value>
                <fullName>Sin obligaciones fiscales</fullName>
            </value>
            <value>
                <fullName>Régimen Simplificado de Confianza (RESICO)</fullName>
            </value>
            <value>
                <fullName>General de Ley Personas Morales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>