force-app/main/default/objects/Lead/fields/Suma_asegurada__c.field-meta.xml
<CustomField>
    <fullName>Suma_asegurada__c</fullName>
    <label>Suma asegurada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>