force-app/main/default/objects/Lead/fields/Tech_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Tech_Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Tech_Vendedor__c</referenceTo>
    <relationshipLabel>Prospectos</relationshipLabel>
    <relationshipName>Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>