force-app/main/default/objects/Lead/fields/Tipo_de_cobertura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cobertura__c</fullName>
    <label>Tipo de cobertura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Básica</fullName>
            </value>
            <value>
                <fullName>Amplia</fullName>
            </value>
            <value>
                <fullName>Limitada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>