force-app/main/default/objects/Lead/fields/Tipo_de_seguro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_seguro__c</fullName>
    <label>Tipo de seguro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seguros de auto</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
            <value>
                <fullName>Daños</fullName>
            </value>
            <value>
                <fullName>Gastos Médicos</fullName>
            </value>
            <value>
                <fullName>Fianzas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>