force-app/main/default/objects/Lead/fields/TipoFianza__c.field-meta.xml
<CustomField>
    <fullName>TipoFianza__c</fullName>
    <label>Tipo de fianza</label>
    <length>100</length>
    <type>Text</type>
</CustomField>