force-app/main/default/objects/Lead/fields/tipos_de_contribuyentes__c.field-meta.xml
<CustomField>
    <fullName>tipos_de_contribuyentes__c</fullName>
    <label>Tipos de Contribuyentes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Persona moral</fullName>
            </value>
            <value>
                <fullName>Persona física</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>