force-app/main/default/objects/Lead/fields/Ubicacion_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion_Riesgo__c</fullName>
    <label>Ubicación del Riesgo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>