force-app/main/default/objects/Lead/fields/Uso__c.field-meta.xml
<CustomField>
    <fullName>Uso__c</fullName>
    <label>Uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particular</fullName>
            </value>
            <value>
                <fullName>Aplicación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>