force-app/main/default/objects/Lead/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Versión</label>
    <length>45</length>
    <type>Text</type>
</CustomField>