force-app/main/default/objects/Lead/recordTypes/Auto.recordType-meta.xml
<RecordType>
    <fullName>Auto</fullName>
    <active>true</active>
    <businessProcess>Prospectos</businessProcess>
    <description>Seguro de Automóvil</description>
    <label>Auto</label>
</RecordType>