force-app/main/default/objects/Lead/recordTypes/Danos.recordType-meta.xml
<RecordType>
    <fullName>Danos</fullName>
    <active>true</active>
    <businessProcess>Prospectos</businessProcess>
    <description>Seguro de Daños / RC / Empresarial</description>
    <label>Daños</label>
</RecordType>