force-app/main/default/objects/Lead/recordTypes/Fianzas.recordType-meta.xml
<RecordType>
    <fullName>Fianzas</fullName>
    <active>true</active>
    <businessProcess>Prospectos</businessProcess>
    <description>Prospecto para Fianza</description>
    <label>Fianzas</label>
</RecordType>