force-app/main/default/objects/Lead/recordTypes/GMM.recordType-meta.xml
<RecordType>
    <fullName>GMM</fullName>
    <active>true</active>
    <businessProcess>Prospectos</businessProcess>
    <description>Gastos Médicos Mayores</description>
    <label>GMM / Gastos Médicos</label>
</RecordType>