force-app/main/default/objects/Lead/recordTypes/Membresia_Ollin.recordType-meta.xml
<RecordType>
    <fullName>Membresia_Ollin</fullName>
    <active>true</active>
    <businessProcess>Prospectos</businessProcess>
    <description>Prospecto para Membresía Ollin</description>
    <label>Membresía Ollin</label>
</RecordType>