force-app/main/default/objects/Lead/recordTypes/Vida_PPR.recordType-meta.xml
<RecordType>
    <fullName>Vida_PPR</fullName>
    <active>true</active>
    <businessProcess>Prospectos</businessProcess>
    <description>Seguro de Vida y Plan Personal de Retiro</description>
    <label>Vida / PPR</label>
</RecordType>