force-app/main/default/objects/Lead/validationRules/CURP.validationRule-meta.xml
<ValidationRule>
    <fullName>CURP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(CURP__c)),
    NOT(
        REGEX(
            CURP__c,
            &quot;^[A-Z][AEIOUX][A-Z]{2}[0-9]{2}(0[1-9]|1[0-2])(0[1-9]|[12][0-9]|3[01])[HMX](AS|BC|BS|CC|CL|CM|CS|CH|DF|DG|GT|GR|HG|JC|MC|MN|MS|NT|NL|OC|PL|QT|QR|SP|SL|SR|TC|TS|TL|VZ|YN|ZS|NE)[B-DF-HJ-NP-TV-Z]{3}[A-Z0-9][0-9]$&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>El CURP debe tener un formato válido de 18 caracteres en mayúsculas.</errorMessage>
</ValidationRule>